--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,13 @@
     <meta name="theme-color" content="#187fc0">
     <meta name="description" content="">
     <meta name="keywords" content="">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <title>Office Playlistify</title>
     <style>html, body, #app, #app > div {
       padding: 0;
       margin: 0;
       height: 100%;
+      width: 100%;
     }</style>
   </head>
   <body>
