--- a/client/index.html
+++ b/client/index.html
@@ -3,20 +3,19 @@
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    <meta name="theme-color" content="#187fc0">
     <meta name="description" content="">
     <meta name="keywords" content="">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <title>Office Playlistify</title>
-    <style>html, body, #app, #app > div {
+    <style>html, body, #app > div {
       padding: 0;
       margin: 0;
       height: 100%;
       width: 100%;
+      background-color: transparent;
     }</style>
   </head>
   <body>
     <div id="app"></div>
-    <script type="text/javascript" src="/app.js"></script>
   </body>
 </html>
