--- a/client/index.html
+++ b/client/index.html
@@ -6,14 +6,20 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <title>Office Playlistify</title>
-    <style>html, body, #app > div {
-      padding: 0;
-      margin: 0;
-      height: 100%;
-      width: 100%;
-      background-color: transparent;
-    }</style>
+    <style>
+      html {
+        height: 100%;
+      }
+      body {
+        height: 100%;
+        width: 100%;
+      }
+      #app {
+        height: 100%;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
