style login header and footer

--- a/client/index.html
+++ b/client/index.html
@@ -5,20 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <title>Office Playlistify</title>
     <style>
-      html {
-        height: 100%;
-      }
-      body {
-        height: 100%;
-        width: 100%;
-      }
-      #app {
-        height: 100%;
-      }
+      html { height: 100%; }
+      body { height: 100%; width: 100%; }
+      #app { height: 100%; }
     </style>
   </head>
   <body>
